Fix Android multi-process tests on M.

On M, there are two issues:
1. Fd 4 is important, although I don't know what it is.
2. Some test environment setup can't be done in the child process.

BUG=608732,585849

Review-Url: https://codereview.chromium.org/1952513003
Cr-Commit-Position: refs/heads/master@{#391692}

Former-commit-id: 931b0d62745156f2d7cf8ba43eb4de6a238c5a24